# smartgarden-qt

./: .gitignore  CMakeLists.txt  Context.cpp  Context.h  Main.qml  SoilID.h  ValveID.h  data.cpp  data.h  enviromentaldata.cpp  enviromentaldata.h  httpclient.cpp  httpclient.h  ijsondeserialize.cpp  ijsondeserialize.h  main.cpp  provider.cpp  provider.h  qml.qrc  resources.qrc  soilidlistmodel.cpp  soilidlistmodel.h  valveidlistmodel.cpp  valveidlistmodel.h  worker.cpp  worker.h
Resources/: configure.json  resource.json
UI/HomeScreen/LeftSide/: LeftSide.qml
UI/HomeScreen/RightSide/: RightSide.qml
qml/: Main.qml
qml/UI/HomeScreen/LeftSide/: LeftSide.qml
qml/UI/HomeScreen/RightSide/: RightSide.qml
